<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.interview</groupId>
	<artifactId>credable</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>credable</name>
	<description>OKiri George  Credable Interview Project</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>23</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-batch</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-freemarker</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.3.0</version> </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.batch</groupId>
			<artifactId>spring-batch-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-artemis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>annotationProcessor</scope>
		</dependency>

		<dependency>
			<groupId>jakarta.xml.ws</groupId>
			<artifactId>jakarta.xml.ws-api</artifactId>
			<version>4.0.0</version> </dependency>

		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>jaxws-rt</artifactId>
			<version>4.0.2</version> <scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.0</version> </dependency>

		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.2</version> <scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<!-- https://mvnrepository.com/artifact/jakarta.activation/jakarta.activation-api -->
		<dependency>
			<groupId>jakarta.activation</groupId>
			<artifactId>jakarta.activation-api</artifactId>
			<version>2.1.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.ws/spring-ws -->
		<dependency>
			<groupId>org.springframework.ws</groupId>
			<artifactId>spring-ws</artifactId>
			<version>4.0.11</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-activemq</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework/org.springframework.oxm -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-codegen-plugin</artifactId>
				<version>4.1.1</version> <executions>
				<execution>
					<id>generate-kyc-client</id>
					<phase>generate-sources</phase>
					<goals>
						<goal>wsdl2java</goal>
					</goals>
					<configuration>
						<input>${basedir}/src/main/resources/wsdl/customerWsdl.wsdl</input>
						<outputDirectory>${project.build.directory}/generated-sources/cxf</outputDirectory>
						<packageName>com.credable.lms.infrastructure.cbs.kyc</packageName>
					</configuration>
				</execution>
				<execution>
					<id>generate-transaction-client</id>
					<phase>generate-sources</phase>
					<goals>
						<goal>wsdl2java</goal>
					</goals>
					<configuration>
						<input>${basedir}/src/main/resources/wsdl/transactionWsdl.wsdl</input>
						<outputDirectory>${project.build.directory}/generated-sources/cxf</outputDirectory>
						<packageName>com.credable.lms.infrastructure.cbs.transaction</packageName>
					</configuration>
				</execution>
			</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-codegen-plugin</artifactId>
				<version>4.1.1</version>  <executions>
				<execution>
					<id>generate-kyc-client</id>
					<phase>generate-sources</phase>
					<goals>
						<goal>wsdl2java</goal>
					</goals>
					<configuration>
						<input>${basedir}/src/main/resources/wsdl/customerWsdl.wsdl</input>
						<outputDirectory>${project.build.directory}/generated-sources/cxf</outputDirectory>
						<packageName>com.credable.lms.infrastructure.cbs.kyc</packageName>
					</configuration>
				</execution>
				<execution>
					<id>generate-transaction-client</id>
					<phase>generate-sources</phase>
					<goals>
						<goal>wsdl2java</goal>
					</goals>
					<configuration>
						<input>${basedir}/src/main/resources/wsdl/transactionWsdl.wsdl</input>
						<outputDirectory>${project.build.directory}/generated-sources/cxf</outputDirectory>
						<packageName>com.credable.lms.infrastructure.cbs.transaction</packageName>
					</configuration>
				</execution>
			</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>21</source>
					<target>21</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
